--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,14 @@
+ #Ambiente de prueba
+ #spring.datasource.url=jdbc:mysql://localhost:3306/backendhcc?useSSL=false&serverTimezone=UTC
+ #spring.datasource.username=root
+ #spring.datasource.password=
+
+ #Ambiente de producci\u00f3n
+ spring.datasource.url=jdbc:mysql://ub7g5tpoc2wgswmg:j4R98A15HhI7Fr5jBQxO@bdvt5sohyk9jidd99dfz-mysql.services.clever-cloud.com:3306/bdvt5sohyk9jidd99dfz?useSSL=false&serverTimezone=UTC
+ spring.datasource.username=ub7g5tpoc2wgswmg
+ spring.datasource.password=j4R98A15HhI7Fr5jBQxO
+
  spring.jpa.hibernate.ddl-auto=update
- spring.datasource.url=jdbc:mysql://localhost:3306/backendhcc?useSSL=false&serverTimezone=UTC
- spring.datasource.username=root
- spring.datasource.password=
  spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #JWT
