prueba con base sin datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,11 +4,11 @@
  #spring.datasource.password=
 
  #Ambiente de producci\u00f3n
- spring.datasource.url=jdbc:mysql://uc6zcv2cosh5axss:u9SpLtZhBx9h8KpIb9z6@bxk8i5ifteot0xw8amwn-mysql.services.clever-cloud.com:3306/bxk8i5ifteot0xw8amwn
- spring.datasource.username=uc6zcv2cosh5axss
- spring.datasource.password=u9SpLtZhBx9h8KpIb9z6
+ spring.datasource.url=jdbc:mysql://ub7g5tpoc2wgswmg:j4R98A15HhI7Fr5jBQxO@bdvt5sohyk9jidd99dfz-mysql.services.clever-cloud.com:3306/bdvt5sohyk9jidd99dfz
+ spring.datasource.username=ub7g5tpoc2wgswmg
+ spring.datasource.password=j4R98A15HhI7Fr5jBQxO
 
- spring.jpa.hibernate.ddl-auto=none
+ spring.jpa.hibernate.ddl-auto=update
  spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
  spring.datasource.driver-class-name=com.mysql.jbdc.Driver
 spring.jpa.show-sql=true
