--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
  #spring.datasource.password=
 
  #Ambiente de producci\u00f3n
- spring.datasource.url=jdbc:mysql://ub7g5tpoc2wgswmg:j4R98A15HhI7Fr5jBQxO@bdvt5sohyk9jidd99dfz-mysql.services.clever-cloud.com:3306/bdvt5sohyk9jidd99dfz
+ spring.datasource.url=jdbc:mysql://ub7g5tpoc2wgswmg:j4R98A15HhI7Fr5jBQxO@bdvt5sohyk9jidd99dfz-mysql.services.clever-cloud.com:3306/bdvt5sohyk9jidd99dfz?useSSL=false&serverTimezone=UTC
  spring.datasource.username=ub7g5tpoc2wgswmg
  spring.datasource.password=j4R98A15HhI7Fr5jBQxO
 
