probar base con datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@
  spring.datasource.username=ub7g5tpoc2wgswmg
  spring.datasource.password=j4R98A15HhI7Fr5jBQxO
 
- spring.jpa.hibernate.ddl-auto=update
+ spring.jpa.hibernate.ddl-auto=none
  spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
  spring.datasource.driver-class-name=com.mysql.jbdc.Driver
  spring.jpa.show-sql=true
