quitar limite de 2 conexiones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@
  spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
  spring.datasource.driver-class-name=com.mysql.jbdc.Driver
  spring.jpa.show-sql=true
- spring.datasource.hikari.maximun-pool-size=2
+ #spring.datasource.hikari.maximun-pool-size=2
 
 
 
