poner limite de 2 conexiones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,12 +7,11 @@
  spring.datasource.url=jdbc:mysql://ub7g5tpoc2wgswmg:j4R98A15HhI7Fr5jBQxO@bdvt5sohyk9jidd99dfz-mysql.services.clever-cloud.com:3306/bdvt5sohyk9jidd99dfz?useSSL=false&serverTimezone=UTC
  spring.datasource.username=ub7g5tpoc2wgswmg
  spring.datasource.password=j4R98A15HhI7Fr5jBQxO
-
  spring.jpa.hibernate.ddl-auto=update
  spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
  spring.datasource.driver-class-name=com.mysql.jbdc.Driver
  spring.jpa.show-sql=true
- #spring.datasource.hikari.maximun-pool-size=2
+ spring.datasource.hikari.maximun-pool-size=2
 
 
 
