--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
  #Ambiente de prueba
- #spring.datasource.url=jdbc:mysql://localhost:3306/backendhcc?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/backendhcc?useSSL=false&serverTimezone=UTC
  #spring.datasource.username=root
  #spring.datasource.password=
 
@@ -16,5 +16,5 @@
 
 
 #JWT login
-#jwt.secret = secret
-#jwt.expiration = 3600
+jwt.secret = secret
+jwt.expiration = 3600
